--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js --exec \"npx babel-node src/index.js\""
+    "start": "npx nodemon ./src/index.js --exec \"npx babel-node src/index.js\""
   },
   "license": "MIT",
   "dependencies": {
